--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -8,6 +8,9 @@
   background-color: bisque;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  flex-basis: 100%;
+  row-gap: 10px;
 }
 
 .input {
@@ -15,4 +18,20 @@
   border-width: 1px;
   border-radius: 5px;
   padding: 2px 5px;
+}
+
+@media screen and (max-width: 767px) {
+  .wrapper {
+    max-width: initial;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .label {
+    justify-content: center;
+  }
+
+  .input {
+    flex-basis: 90%;
+  }
 }
